# hybrid

./: .cursorrules  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  LICENSING.md  Makefile  README.md  tasks.md
docs/: design.md  dogfooding.md  hosted-service.md  language-instrumentation.md  language-plane-unified-design.md  migration-plan.md  platform-architecture.md  proxy-integration-posture.md  repo-layout.md  snippets.suite.yaml
docs-site/: README.md  changelog.md  downloads.md  faq.md  glossary.md  index.md  installation.md  introduction.md  package-lock.json  package.json  quickstart.md  roadmap.md  versioning.md
e2e/: README.md  capture_flow_test.go  docker-compose.auth.yaml  docker-compose.cloud.yaml  docker-compose.yaml  envoy.cloud.tmpl.yaml  envoy.yaml  go.mod  go.sum  helpers_test.go  replay_flow_test.go  run-all-cloud.sh  softprobe-runtime.yaml  strict_policy_test.go
getting-started/: .gitignore  docker-compose.yaml  envoy-entrypoint.sh  envoy.yaml
scripts/: deploy-runtime-cloudrun.sh  package-agent-skill.py  validate-ai-context.py
softprobe-cli/: .gitignore  go.mod  package.json
softprobe-java/: README.md  pom.xml
softprobe-js/: README.md  design-multi-repo-layout.md  design-node-port.md  design-proxy-first.md  design.md  example-tasks.md  package.json  (+4 more)
softprobe-python/: README.md  pyproject.toml
softprobe-python/softprobe/: __init__.py  client.py  softprobe.py
softprobe-python/softprobe/core/: __init__.py  case_lookup.py
softprobe-python/tests/: test_client.py  test_parity_dogfood.py  test_pytest_example.py  test_softprobe.py
(+446 files in other folders)
