[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "softprobe"
version = "0.0.0"
description = "Softprobe Python SDK — capture/replay HTTP testing"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/softprobe/softprobe"
